<resources>
    <string name="app_name">DonationManager</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation</string>
    <string name="navigation_drawer_close">Close navigation</string>
    <string-array name="accountType">
        <item>Donor</item>
        <item>Charity</item>
    </string-array>
    <string name="user_firstname">First Name</string>
    <string name="user_lastname">Last Name</string>
    <string name="user_pnumber">Phone Number</string>
    <string name="user_street">Address</string>
    <string name="user_city">City</string>
    <string name="user_postcode">Postcode</string>
    <string-array name="states">
        <item>NSW</item>
        <item>WA</item>
        <item>SA</item>
        <item>QLD</item>
        <item>VIC</item>
        <item>TAS</item>
    </string-array>

    <string-array name="hours">

        <item>0000</item>
        <item>0100</item>
        <item>0200</item>
        <item>0300</item>
        <item>0400</item>
        <item>0500</item>
        <item>0600</item>
        <item>0700</item>
        <item>0800</item>
        <item>0900</item>
        <item>1000</item>
        <item>1100</item>
        <item>1200</item>
        <item>1300</item>
        <item>1400</item>
        <item>1500</item>
        <item>1600</item>
        <item>1700</item>
        <item>1800</item>
        <item>1900</item>
        <item>2000</item>
        <item>2100</item>
        <item>2200</item>
        <item>2300</item>
    </string-array>

    <string name="state_label">State</string>

    <string-array name="donationType">
        <item>Pick Up</item>
        <item>Drop Off</item>
    </string-array>

    <string-array name="furnitureType">
        <item>Chair</item>
        <item>Table</item>
        <item>Sofa</item>
        <item>Shelf</item>
        <item>Cabinet</item>
        <item>Bed</item>
        <item>Drawer</item>
    </string-array>

    <string-array name="timeSlot">
        <item>Morning</item>
        <item>Afternoon</item>
        <item>Evening</item>
    </string-array>

    <string-array name="charityNames">
        <item>Charity 1</item>
        <item>Charity 2</item>
        <item>Charity 3</item>
    </string-array>

</resources>
