<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:fontFamily="sans-serif-smallcaps"
    android:background="@color/colorBackground">

    <TextView
        android:id="@+id/tvProfileSetupM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="15dp"
        android:text="Manage Profile"
        android:fontFamily="sans-serif-smallcaps"
        android:textSize="30dp"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvAccountTypeM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:text="Account Type"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvProfileSetupM" />

    <Spinner
        android:id="@+id/accountTypeSpinnerM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAccountTypeM" />


    <EditText
        android:id="@+id/editAddressM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/user_street"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editFirstNameM" />

    <EditText
        android:id="@+id/editCityM"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:hint="@string/user_city"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editLastNameM" />

    <Spinner
        android:id="@+id/stateTypeSpinnerM"
        android:layout_width="wrap_content"
        android:layout_height="26dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/editUserPhoneM"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editPostcodeM"
        app:layout_constraintTop_toBottomOf="@+id/editCityM" />

    <EditText
        android:id="@+id/editUserPhoneM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/user_pnumber"
        android:inputType="phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPostcodeM" />

    <Button
        android:id="@+id/btnSaveM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="8dp"
        android:text="Save"
        android:textColor="@color/colorPrimaryDark"
        android:background="@drawable/button_main"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editCharityNameM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:hint="Charity Name"
        android:inputType="textPersonName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/openHourSpinnerM" />

    <EditText
        android:id="@+id/editFirstNameM"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/user_firstname"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editCharityNameM" />


    <EditText
        android:id="@+id/editLastNameM"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:hint="@string/user_lastname"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editCharityNameM" />

    <EditText
        android:id="@+id/editPostcodeM"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/user_postcode"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editAddressM" />

    <TextView
        android:id="@+id/tvStatesM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/state_label"
        app:layout_constraintBottom_toTopOf="@+id/editUserPhoneM"
        app:layout_constraintEnd_toStartOf="@+id/stateTypeSpinnerM"
        app:layout_constraintStart_toEndOf="@+id/editPostcodeM"
        app:layout_constraintTop_toBottomOf="@+id/editAddressM" />


    <TextView
        android:id="@+id/tvOpenHoursM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:text="Opening Time"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="15dp"
        app:layout_constraintEnd_toStartOf="@+id/tvCloseHoursM"
        app:layout_constraintHorizontal_bias="0.0"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accountTypeSpinnerM" />

    <TextView
        android:id="@+id/tvCloseHoursM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="212dp"
        android:layout_marginLeft="212dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorPrimaryDark"
        android:text="Closing Time"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accountTypeSpinnerM" />


    <Spinner
        android:id="@+id/openHourSpinnerM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"

        app:layout_constraintEnd_toStartOf="@+id/editLastNameM"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvOpenHoursM"
        />


    <Spinner
        android:id="@+id/closeHourSpinnerM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="212dp"
        android:layout_marginLeft="212dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCloseHoursM" />


    <TextView
        android:id="@+id/tvDaysM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginTop="16dp"
        android:text="Open Days"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editUserPhoneM" />

    <CheckBox
        android:id="@+id/checkbox_mondayM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="Mon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDaysM" />

    <CheckBox
        android:id="@+id/checkbox_tuesdayM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="Tue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_mondayM" />

    <CheckBox
        android:id="@+id/checkbox_wednesdayM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="Wed"
        app:layout_constraintStart_toEndOf="@+id/checkbox_mondayM"
        app:layout_constraintTop_toBottomOf="@+id/tvDaysM" />

    <CheckBox
        android:id="@+id/checkbox_thursdayM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="8dp"
        android:text="Thu"
        app:layout_constraintStart_toEndOf="@+id/checkbox_tuesdayM"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_wednesdayM" />

    <CheckBox
        android:id="@+id/checkbox_fridayM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:text="Fri"
        app:layout_constraintStart_toEndOf="@+id/checkbox_wednesdayM"
        app:layout_constraintTop_toBottomOf="@+id/tvDaysM" />

    <CheckBox
        android:id="@+id/checkbox_saturdayM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="Sat"
        app:layout_constraintStart_toEndOf="@+id/checkbox_thursdayM"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_fridayM" />


    <CheckBox
        android:id="@+id/checkbox_sundayM"
        android:layout_width="62dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="Sun"
        app:layout_constraintStart_toEndOf="@+id/checkbox_fridayM"
        app:layout_constraintTop_toBottomOf="@+id/tvDaysM" />





</android.support.constraint.ConstraintLayout>
